N26/force-app/main/default/objects/n26_Product_Config__mdt/n26_Product_Config__mdt.object-meta.xml
<CustomObject>
    <label>n26 Product Config</label>
    <pluralLabel>n26 Product Configs</pluralLabel>
</CustomObject>