N26/force-app/main/default/objects/n26_Product_Config__mdt/fields/ATM_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_Percent__c</fullName>
    <label>ATM Fee Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>