N26/force-app/main/default/objects/n26_Product_Config__mdt/fields/Card_Replacement_Currency__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Currency__c</fullName>
    <label>Card Replacement Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>