N26/force-app/main/default/objects/n26_Product_Config__mdt/fields/Card_Replacement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Fee__c</fullName>
    <label>Card Replacement Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>