N26/force-app/main/default/objects/n26_Product_Config__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>55</length>
    <type>Text</type>
</CustomField>