N26/force-app/main/default/objects/n26_Product_Config__mdt/fields/Monthly_Fee_Currency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Currency__c</fullName>
    <label>Monthly Fee Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>