N26/force-app/main/default/objects/n26_Product_Config__mdt/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>